--- a/doc/tex/titlepage.tex
+++ b/doc/tex/titlepage.tex
@@ -17,22 +17,26 @@
 	
 	\vspace{\baselineskip} % Espacio pre-título
 	
-	{\LARGE \textbf{Formalización de mónadas concurrentes en Agda: el caso de la mónada
-Delay}} % Título
+	{\LARGE \textbf{Formalización de mónadas concurrentes en}}
 	
+	{\LARGE \textbf{Agda: el caso de la mónada
+Delay}} % Título
 	\vspace{\baselineskip} % Espacio post-título
 	
 	\rule{\textwidth}{0.4pt}\vspace*{-\baselineskip}\vspace{3.2pt} % Línea delgada
 	\rule{\textwidth}{1.6pt} % Línea grande
 	
-	\vspace{2\baselineskip} % Espacio post título
+	\vspace{3\baselineskip} % Espacio post título
 	
 	%------------------------------------------------
 	%	Subtítulo
 	%------------------------------------------------
 	
-	{\Large Tesina de Grado}
+	{\LARGE \textbf{Tesina de Grado}}
+
+	{\Large Licenciatura en Ciencias de la Computación}
 	\vspace*{3\baselineskip} % Espaciooo
+
 	
 	%------------------------------------------------
 	%	Realizadores
@@ -46,7 +50,7 @@ Delay}} % Título
 	
 	%\vspace{0.5\baselineskip} % Espacio	
 	
-	\large{Legajo: B-5926/9}
+	%\large{Legajo: B-5926/9}
 	
 	\vspace{2\baselineskip} % Espacio
 
@@ -61,7 +65,7 @@ Delay}} % Título
     %Imagen
     \begin{figure}[h] %El h es para que quede en el lugar
 	\centering
-	\includegraphics[width=0.3\linewidth]{img/UNR.png} \hfill \includegraphics[width=0.3\linewidth]{img/FCEIA.jpeg}
+	\includegraphics[width=0.4\linewidth]{img/UNR.png} \hfill \includegraphics[width=0.4\linewidth]{img/FCEIA.jpeg}
 	\end{figure}
     
     \vfill % Espacio
