agrego principio de induccion y coinduccion y seccion epecial de conaturales

--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -143,3 +143,33 @@ author = {Jesse Hughes and Bart Jacobs},
 	year={2019}, 
 	pages={67–92}
 }
+
+@article{milner:1991,
+	title = {Co-induction in relational semantics},
+	journal = {Theoretical Computer Science},
+	volume = {87},
+	number = {1},
+	pages = {209-220},
+	year = {1991},
+	doi = {https://doi.org/10.1016/0304-3975(91)90033-X},
+	author = {Robin Milner and Mads Tofte},
+}
+
+@incollection{jacobs:2012,
+  author       = {Bart Jacobs and Jan Rutten},
+  editor       = {Davide Sangiorgi and Jan J. M. M. Rutten},
+  title        = {An introduction to (co)algebra and (co)induction},
+  booktitle    = {Advanced Topics in Bisimulation and Coinduction},
+  series       = {Cambridge tracts in theoretical computer science},
+  volume       = {52},
+  pages        = {38--99},
+  publisher    = {Cambridge University Press},
+  year         = {2012},
+}
+
+@inproceedings{gordon:2017,
+  title={Corecursion and coinduction: what they are and how they relate to recursion and induction},
+  author={Mike Gordon},
+  year={2017},
+  url={https://api.semanticscholar.org/CorpusID:9734802}
+}
