--- a/doc/tex/delay.tex
+++ b/doc/tex/delay.tex
@@ -55,9 +55,9 @@ Un conjunto $A$ está \textbf{definido coinductivamente} por $B$, $K$ y $U$ si e
 
 Se puede observar que ambas definiciones son muy similares, la diferencia sustancial está en las palabras \textit{mínimo} y \textit{máximo}. Para ver más clara la diferencia, en el caso de una definición inductiva, se puede pensar que el conjunto a definir comienza siendo el conjunto vacío $\emptyset$ y se van añadiendo elementos iterativamente de acuerdo con las reglas. En una definición coinductiva, por el contrario, se puede imaginar que el conjunto comienza siendo el conjunto de todos los objetos posibles (el universo $U$), e iterativamente se van removiendo los objetos que contradicen las reglas. El hecho de que en este caso $A$ sea el máximo conjunto que cumple las condiciones, implica que si hay otro conjunto $A'$ que también las satisface, entonces $A' \subseteq A$.
 
-Una vez que se tienen conjuntos definidos coinductivamente, se pueden probar propiedades sobre ellos mediante el principio de coinducción estructural, el cual fue introducido por primera vez por Milner y Tofte en 1991 \cite{milner:1991}.
+Una vez que se tienen conjuntos definidos coinductivamente, se pueden probar propiedades sobre ellos mediante el principio de coinducción, el cual fue introducido por primera vez por Milner y Tofte en 1991 \cite{milner:1991}.
 
-\begin{thm}[Principio de coinducción estructural]
+\begin{thm}[Principio de coinducción]
 Sea $A \subseteq U$ definido coinductivamente por la base $B$ y el constructor $K$. Sea $P$ una propiedad que verifica:
 \begin{itemize}
 \item Para cada $f \in K$, si $f(a_1, ..., a_{ar(f)}) = a$ y $P(a_i)$ se cumple para cada $i = 1, ..., ar(f)$, entonces $P(a)$ se cumple. 
@@ -65,7 +65,7 @@ Sea $A \subseteq U$ definido coinductivamente por la base $B$ y el constructor $
 Entonces se cumple $P(x) \ \forall x \in A$.
 \end{thm}
 
-Al igual que antes, el principio es bastante similar al inductivo, excepto que no se pide que la propiedad se cumpla para los casos base. De hecho, un conjunto definido coinductivamente podría no tener un conjunto base ($B = \emptyset$), es el caso, por ejemplo, de los flujos de datos (\textit{streams}) infinitos. Aún teniendo un conjunto base, no quiere decir que todos los elementos del conjunto se construyan a partir de elementos de la base. Esta característica hace parecer que el paso coinductivo no está bien fundado y muchas veces genera dudas sobre la veracidad de las pruebas por coinducción. Sin embargo, siempre que la hipótesis coinductiva se aplique sobre elementos ``más pequeños'', la prueba tendrá sentido. Cualquier dificultad que haga que la propiedad a demostrar no se cumpla se manifiesta en el intento de probar el paso coinductivo.
+Al igual que antes, el principio es bastante similar al inductivo, excepto que no se pide que la propiedad se cumpla para los casos base. De hecho, un conjunto definido coinductivamente podría no tener un conjunto base ($B = \emptyset$), es el caso, por ejemplo, de los flujos de datos (\textit{streams}) infinitos. Aún teniendo un conjunto base, no quiere decir que todos los elementos del conjunto se construyan a partir de elementos de la base. Esta característica hace parecer que el paso coinductivo no está bien fundado y muchas veces genera dudas sobre la veracidad de las pruebas por coinducción. Sin embargo, cualquier dificultad que haga que la propiedad a demostrar no se cumpla se manifiesta en el intento de probar el paso coinductivo.
 
 Para ilustrar mejor el concepto de coinducción, se utilizarán algunos ejemplos presentados por Kozen y Silva \cite{kozen:2017} con el objetivo de promover este principio como una herramienta útil y hacerlo tan familiar e intuitivo como la inducción. 
 
@@ -81,7 +81,7 @@ El tipo de dato definido es la solución  mínima a la ecuación:
 \end{equation}
 Es decir que es el mínimo conjunto tal que se cumplen las condiciones listadas más arriba. Esto significa que uno puede definir funciones con dominio \texttt{Lista de $A$} de manera única por inducción estructural. El tipo de las listas finitas e infinitas sobre $A$ se define coinductivamente como la solución máxima de la ecuación \ref{list}. Esto significa que es el máximo conjunto tal que se cumplen ambas condiciones. En este ejemplo se evidencia que, a pesar de que el conjunto tiene un caso base, los elementos no necesariamente se construyen a partir de él, como es el caso de las listas de longitud infinita.
 
-Si bien Milner y Tofte \cite{milner:1991} fueron los primeros en introducir la coinducción, ellos lo hicieron en base a puntos fijos mínimos y máximos. Existe otro  trasfondo teórico sobre el cual se puede definir formalmente la coinducción, el cual se basa en álgebras iniciales y coálgebras finales. Este enfoque es el que será utilizado en este trabajo y fue introducido principalmente por Jacobs y Rutten \cite{jacobs:2012}. Se definen a continuación los conceptos de álgebra, coálgebra, álgebra inicial y coálgebra final:
+Si bien Milner y Tofte \cite{milner:1991} fueron los primeros en introducir la coinducción, ellos lo hicieron en base a puntos fijos mínimos y máximos. Existe otro  trasfondo teórico sobre el cual se puede definir formalmente la coinducción, el cual se basa en álgebras iniciales y coálgebras finales. Este enfoque es el que será utilizado en este trabajo y fue con el que trabajaron Jacobs y Rutten \cite{jacobs:2012}. Se definen a continuación los conceptos de álgebra, coálgebra, álgebra inicial y coálgebra final:
 
 \begin{definition}[Álgebra de un funtor]
 Dado un endofuntor $\mathit{F}$ sobre una categoría $\mathscr{C}$, un \textbf{álgebra} de $\mathit{F}$ es un objeto $X$ de $\mathscr{C}$ junto con un morfismo $\alpha : \mathit{F}X \rightarrow X$. Dadas dos álgebras $(X, \alpha : \mathit{F}X \rightarrow X)$, $(Y, \beta : \mathit{F}Y \rightarrow Y)$ de $F$, $m : X \rightarrow Y$ es un morfismo de álgebras si se cumple la siguiente ecuación:
@@ -135,26 +135,26 @@ La inducción matemática es la inducción estructural aplicada a la estructura 
 \end{itemize}
 
 La estructura $(\mathbb{N},0,S)$ es una instancia de la clase de estructuras $(\mathcal{A},z,s)$, donde $\mathcal{A}$ es un conjunto, $z \in \mathcal{A}$ y $s: \mathcal{A} \rightarrow \mathcal{A}$. Estas estructuras se denominan estructuras de Peano. Para cada una de ellas existe una única función $f : \mathbb{N} \rightarrow \mathcal{A}$ tal que $f(0) = z$ y $\forall n \in \mathbb{N}, f(S(n)) = s(f(n))$. Una estructura de Peano es un álgebra (pueden llamarse también álgebras de Peano) y $(\mathbb{N},0,S)$ es un álgebra inicial en la categoría de las álgebras de Peano.
-De manera dual, la estructura de los conaturales es una coálgebra final. 
+De manera dual, la estructura de los conaturales es una coálgebra final en la categoría de las coálgebras de Peano. 
 
-El conjunto de los números conaturales $\bar{\mathbb{N}}$ puede definirse coloquialmente como el máximo conjunto que cumple que $0 \in \bar{\mathbb{N}}$ y si $n \in \bar{\mathbb{N}}$ entonces $S(n) \in \bar{\mathbb{N}}$ (las mismas condiciones que los números naturales). Sin embargo, como se mencionó anteriormente, los conjuntos coinductivos suelen definirse por sus destructores en lugar de sus constructores. Esto hace que la definición sea más intuitiva y se comprenda mejor. 
+El conjunto de los números conaturales $\bar{\mathbb{N}}$ puede definirse como el máximo conjunto que cumple que $0 \in \bar{\mathbb{N}}$ y si $n \in \bar{\mathbb{N}}$ entonces $S(n) \in \bar{\mathbb{N}}$ (las mismas condiciones que los números naturales). Sin embargo, como se mencionó anteriormente, los conjuntos coinductivos suelen definirse por sus destructores en lugar de sus constructores. Esto hace que la definición sea más intuitiva y se comprenda mejor. 
 
 El dual del constructor unario $S$ es la función predecesor $P$ definida como $P(n) = n-1$, donde $P$ es una función parcial definida sólo para los números distintos de $0$, por lo cual $\mathrm{Dom}(P) = \{n \ |\  n > 0\}$. Los constructores de aridad $0$ representan elementos distinguidos del conjunto soporte, por lo que no es evidente cuáles son sus destructores correspondientes ya que no hay una componente del constructor que retornar. Para enfrentar esto, los destructores correspondientes a constructores 0-arios retornan un valor arbitrario que representa ``sin componentes''. Este puede ser denotado como $\star$ o $()$. El destructor dual al constructor 0-ario $0$ es la función parcial $is0 : \{0\} \rightarrow \{\star\}$, por lo que necesariamente $is0(0) = \star$ y $\mathrm{Dom}(is0) = \{0\}$. 
 
-Si una coálgebra tiene más de un destructor, entonces todos sus destructores son funciones parciales. El dual de un álgebra de Peano $(\mathcal{A},z,s)$ es una coálgebra de Peano $(\mathcal{C},isz,p)$, donde $isz$ y $p$ son destructores: $isz: \mathcal{C} \nrightarrow  \{\star\}$ y $p : \mathcal{C} \nrightarrow \mathcal{C}$. Los dominios de $isz$ y $p$ forman una partición de $\mathcal{C}$, por lo que si $x \in \mathcal{C}$ entonces o bien $x \in \mathrm{Dom}(isz)$ o bien $x \in \mathrm{Dom}(p)$, pero no ambos. Los números conaturales son la coálgebra de Peano $(\bar{\mathbb{N}},is0,P)$, con la propiedad de que para cualquier coálgebra de Peano $(\mathcal{C},isz,p)$ hay una única función $g : \mathcal{C} \rightarrow \bar{\mathbb{N}}$ tal que para cada $x \in \mathcal{C}$:
+El dual de un álgebra de Peano $(\mathcal{A},z,s)$ es una coálgebra de Peano $(\mathcal{C},isz,p)$, donde $isz$ y $p$ son destructores: $isz: \mathcal{C} \nrightarrow  \{\star\}$ y $p : \mathcal{C} \nrightarrow \mathcal{C}$. Si una coálgebra tiene más de un destructor, entonces todos sus destructores son funciones parciales. Los dominios de $isz$ y $p$ forman una partición de $\mathcal{C}$, por lo que si $x \in \mathcal{C}$ entonces o bien $x \in \mathrm{Dom}(isz)$ o bien $x \in \mathrm{Dom}(p)$, pero no ambos. Los números conaturales son la coálgebra de Peano $(\bar{\mathbb{N}},is0,P)$, con la propiedad de que para cualquier coálgebra de Peano $(\mathcal{C},isz,p)$ hay una única función $g : \mathcal{C} \rightarrow \bar{\mathbb{N}}$ tal que para cada $x \in \mathcal{C}$:
 \begin{itemize}
-\item si $x \in \mathrm{Dom}(isz)$ entonces $g(x) \in \mathrm{Dom}(is0)$ y $is0(g(x)) = isz(x)$;
+\item si $x \in \mathrm{Dom}(isz)$ entonces $g(x) \in \mathrm{Dom}(is0)$ e $is0(g(x)) = isz(x)$;
 \item si $x \in \mathrm{Dom}(p)$ entonces $g(x) \in \mathrm{Dom}(P)$ y $P(g(x)) = g(p(x))$.
 \end{itemize}
 
 La coálgebra $(\bar{\mathbb{N}},is0,P)$ es entonces una coálgebra terminal o final en la categoría de las coálgebras de Peano.  
 
-Intuitivamente, un número conatural puede ser o bien el sucesor de otro (está en el dominio de la función $P$ y se puede obtener su predecesor) o bien $0$ (está en el dominio de $is0$), evidenciando el paralelismo entre ambas definiciones. La diferencia con los naturales es que, en este caso, un conatural puede ser sucesor de otro ``infinitamente'', puesto que no hay condición alguna que indique que al aplicar la función predecesor sucesivamente debe llegarse obligatoriamente a $0$. Esto da lugar a un valor especial $\infty$ tal que $P(\infty) = \infty$. El conjunto soporte $\bar{\mathbb{N}}$ sería de alguna manera equivalente a $\mathbb{N} \cup \{\infty\}$. 
+Intuitivamente, un número conatural puede ser o bien el sucesor de otro (está en el dominio de la función $P$ y se puede obtener su predecesor) o bien $0$ (está en el dominio de $is0$), de manera que se evidencia el paralelismo entre ambas definiciones. La diferencia con los naturales es que, en este caso, un conatural puede ser sucesor de otro ``infinitamente'', puesto que no hay condición alguna que indique que al aplicar la función predecesor sucesivamente debe llegarse obligatoriamente a $0$. Esto da lugar a un valor especial $\infty$ tal que $P(\infty) = \infty$. El conjunto soporte $\bar{\mathbb{N}}$ sería entonces de alguna manera equivalente a $\mathbb{N} \cup \{\infty\}$. 
 
 
 \section{Mónada \textit{Delay}}\label{delay:delay}
 
-El tipo de dato \textit{delay} consituye una mónada fuerte, lo cual hace posible manejar computaciones que posiblemente no terminen como si fuera cualquier otra computación con efectos laterales. A continuación se presenta su definición formal siguiendo el estilo utilizado en \cite{chapman:2019}. 
+El tipo de dato \textit{delay} consituye una mónada fuerte, lo cual hace posible manejar computaciones que posiblemente no terminen como si fuera cualquier otra computación con efectos laterales. A continuación se presenta su definición formal siguiendo el estilo utilizado por Chapman et al \cite{chapman:2019}. 
 
 \begin{definition}[\textit{Delay}]
 Sea $X$ un tipo. Cada habitante de $\mathbf{D} X$ es una computación posiblemente infinita que, si termina, retorna un valor de tipo $X$. Se define $\mathbf{D} X$ como un tipo coinductivo mediante las siguientes reglas:
@@ -172,7 +172,7 @@ Dada una relación de equivalencia $R$ sobre $X$, se define la relación $\sim_R
 \end{equation*}
 \end{definition}
 
-La $\equiv$-bisemejanza fuerte se denomina simplemente bisemejanza fuerte y se denota $\sim$.
+Siendo $\equiv$ la igualdad proposicional, la $\equiv$-bisemejanza fuerte se denomina simplemente bisemejanza fuerte y se denota $\sim$.
 
 En algunos casos, uno está interesado en la terminación de las computaciones y no exactamente en el tiempo exacto en el cual terminan. Es deseable entonces tener una relación que considere iguales dos computaciones si terminan con valores iguales, aunque una tarde más en terminar que la otra. Es decir, que identifique computaciones que sólo difieren en una cantidad finita de aplicaciones del constructor \texttt{later}. Esta relación se llama $R$-bisemejanza débil (\textit{$R$-weak bisimilarity} en inglés) y se define en términos de \textit{convergencia}. Esta última es una relación binaria entre $\mathbf{D}X$ y $X$ que relaciona computaciones que terminan con sus valores de terminación. 
 
@@ -210,7 +210,7 @@ Se describirán a continuación los dos soportes de coinducción en Agda que se 
 
 \subsection{Notación Musical}\label{coind:agda:musical}
 
-Para mostrar la notación musical se utilizará como ejemplo el conjunto de los números \textit{conaturales}. Así como las coálgebras son el dual de las álgebras, los números conaturales son el dual de los números naturales y se definen en Agda como sigue:
+Para mostrar la notación musical se utilizará como ejemplo el conjunto de los números \textit{conaturales}, los cuales se definen en Agda como sigue:
 
 \ExecuteMetaData[latex/Coind.tex]{musconat}
 
@@ -230,13 +230,13 @@ Como aproximación a la productividad, en el chequeo de terminación se pide que
 
 Agda tiene un soporte nativo para \textit{sized types}. Estos son tipos que cuentan con un índice que indica el número de desencapsulamientos que pueden realizarse sobre los habitantes de este tipo. Estos índices, llamados tamaños o \textit{sizes}, asisten al chequeo de terminación evaluando que las definiciones corecursivas estén bien definidas. 
 
-En Agda existe un tipo \AgdaPrimitiveType{Size} de tamaños y un tipo \AgdaPrimitiveType{Size<} \AgdaArgument{i} cuyos habitantes son los tamaños estrictamente menores a \AgdaArgument{i}. Si se tiene un tamaño \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i}, este es forzado a ser \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size}. La relación de orden de los tamaños es transitiva, lo que implica que si se tiene que \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i} y \AgdaArgument{k} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{j}, entonces \AgdaArgument{k} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i}. La relación de orden es, además, bien fundada, lo cual se usa para definir funciones corecursivas productivas. Existe también una operación sucesor de tamaños \AgdaFunction{$\uparrow$} y un tamaño ``infinito'' \AgdaArgument{$\infty$} tal que para cada tamaño \AgdaArgument{i}, \AgdaArgument{i} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{$\infty$}. Finalmente, un \textit{sized type} es un tipo indexado por \AgdaPrimitiveType{Size}.
+En Agda existe un tipo \AgdaPrimitiveType{Size} de tamaños y un tipo \AgdaPrimitiveType{Size<} \AgdaArgument{i} cuyos habitantes son los tamaños estrictamente menores a \AgdaArgument{i}. Si se tiene un tamaño \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i}, este es forzado a ser también de tipo \AgdaPrimitiveType{Size}. La relación de orden de los tamaños es transitiva, lo que implica que si se tiene que \AgdaArgument{j} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i} y \AgdaArgument{k} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{j}, entonces \AgdaArgument{k} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{i}. La relación de orden es, además, bien fundada, lo cual se usa para definir funciones corecursivas productivas. Existe también una operación sucesor de tamaños \AgdaFunction{$\uparrow$} y un tamaño ``infinito'' \AgdaArgument{$\infty$} tal que para cada tamaño \AgdaArgument{i}, \AgdaArgument{i} \AgdaSymbol{:} \AgdaPrimitiveType{Size<} \AgdaArgument{$\infty$}. Finalmente, un \textit{sized type} es un tipo indexado por \AgdaPrimitiveType{Size}.
 
 Para ejemplificar el uso de los \textit{sized types}, se definen a continuación los conaturales utilizando esta técnica.
 
 \ExecuteMetaData[latex/Coind.tex]{sizedconat}
 
-Ambos tipos, \AgdaDatatype{Conat} y \AgdaRecord{Conat$'$} están indexados por un tamaño \AgdaArgument{i}. Este índice debe entenderse como una cota superior del número de veces que puede aplicarse \AgdaField{force}. Más precisamente, cuando se aplica \AgdaField{force} a un \AgdaArgument{n$'$} \AgdaSymbol{:} \AgdaRecord{Conat$'$} \AgdaArgument{i} el valor resultante es es un \AgdaArgument{n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{j} de una profundidad estrictamente menor \AgdaArgument{j} \AgdaSymbol{<} \AgdaArgument{i}. Un caso especial es el valor \AgdaArgument{$\infty$n$'$} \AgdaSymbol{:} \AgdaRecord{Conat$'$} \AgdaArgument{$\infty$} de índice infinito, cuyo resultado de aplicar \AgdaField{force} es \AgdaArgument{$\infty$n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{$\infty$}, el cual también tiene índice infinito. De esta manera los tamaños establecen productividad en las definiciones recursivas. Al final, sólo interesan los valores \AgdaArgument{n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{$\infty$} de índice infinito.
+Ambos tipos, \AgdaDatatype{Conat} y \AgdaRecord{Conat$'$} están indexados por un tamaño \AgdaArgument{i}. Este índice debe entenderse como una cota superior del número de veces que puede aplicarse \AgdaField{force}. Más precisamente, cuando se aplica \AgdaField{force} a un \AgdaArgument{n$'$} \AgdaSymbol{:} \AgdaRecord{Conat$'$} \AgdaArgument{i}, el valor resultante es un \AgdaArgument{n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{j} de una profundidad estrictamente menor \AgdaArgument{j} \AgdaSymbol{<} \AgdaArgument{i}. Un caso especial es el valor \AgdaArgument{$\infty$n$'$} \AgdaSymbol{:} \AgdaRecord{Conat$'$} \AgdaArgument{$\infty$} de índice infinito, cuyo resultado de aplicar \AgdaField{force} es \AgdaArgument{$\infty$n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{$\infty$}, el cual también tiene índice infinito. De esta manera los tamaños establecen productividad en las definiciones recursivas. Al final, sólo interesan los valores \AgdaArgument{n} \AgdaSymbol{:} \AgdaDatatype{Conat} \AgdaArgument{$\infty$} de índice infinito.
 
 Si una función corecursiva en \AgdaDatatype{Conat} \AgdaArgument{i} sólo se llama a sí misma con índices menores \AgdaArgument{j} \AgdaSymbol{<} \AgdaArgument{i}, se garantiza la productividad y, por lo tanto, está bien definida. En la siguiente definición del valor \AgdaFunction{infty} se muestran los argumentos implícitos de tamaño explícitamente de manera que se evidencie cómo aseguran la productividad:
 
