--- a/doc/latex/Structures.tex
+++ b/doc/latex/Structures.tex
@@ -78,7 +78,7 @@
 \\
 %
 \>[4]\AgdaField{idl}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -91,7 +91,7 @@
 \\
 %
 \>[4]\AgdaField{idr}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -104,7 +104,7 @@
 \\
 %
 \>[4]\AgdaField{assoc}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -159,7 +159,7 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -173,7 +173,7 @@
 \\
 %
 \>[4]\AgdaField{eqₘ}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -182,8 +182,8 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaField{return}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaField{return}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -196,7 +196,7 @@
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≫=\AgdaUnderscore{}}}%
-\>[10]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -216,13 +216,13 @@
 \\
 %
 \>[4]\AgdaField{law₁}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}%
-\>[130I]\AgdaSymbol{→}\AgdaSpace{}%
+\>[129I]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
@@ -233,8 +233,8 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[130I][@{}l@{\AgdaIndent{0}}]%
-\>[28]\AgdaSymbol{→}\AgdaSpace{}%
+\>[129I][@{}l@{\AgdaIndent{0}}]%
+\>[29]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(((}\AgdaField{return}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
@@ -245,7 +245,7 @@
 \\
 %
 \>[4]\AgdaField{law₂}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -262,13 +262,13 @@
 \\
 %
 \>[4]\AgdaField{law₃}%
-\>[11]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[165I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[164I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -287,7 +287,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[165I][@{}l@{\AgdaIndent{0}}]%
+\>[164I][@{}l@{\AgdaIndent{0}}]%
 \>[28]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
@@ -407,7 +407,7 @@
 %
 \>[4]\AgdaField{idr}%
 \>[11]\AgdaSymbol{:}%
-\>[258I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[257I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -417,7 +417,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\<%
 \\
-\>[258I][@{}l@{\AgdaIndent{0}}]%
+\>[257I][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -435,7 +435,7 @@
 %
 \>[4]\AgdaField{idl}%
 \>[11]\AgdaSymbol{:}%
-\>[279I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[278I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -445,7 +445,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[279I][@{}l@{\AgdaIndent{0}}]%
+\>[278I][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaField{unit}\AgdaSpace{}%
@@ -463,7 +463,7 @@
 %
 \>[4]\AgdaField{assoc}%
 \>[11]\AgdaSymbol{:}%
-\>[300I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[299I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
@@ -483,7 +483,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[300I][@{}l@{\AgdaIndent{0}}]%
+\>[299I][@{}l@{\AgdaIndent{0}}]%
 \>[14]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{fmap}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
@@ -497,14 +497,14 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}%
-\>[331I]\AgdaBound{c}\AgdaSymbol{))\})}\AgdaSpace{}%
+\>[330I]\AgdaBound{c}\AgdaSymbol{))\})}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))}\<%
 \\
-\>[331I][@{}l@{\AgdaIndent{0}}]%
+\>[330I][@{}l@{\AgdaIndent{0}}]%
 \>[56]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -525,3 +525,221 @@
 \AgdaKeyword{public}\<%
 \end{code}
 %</monoidal>
+
+%<*monoidconc>
+\begin{code}%
+\>[0]\AgdaKeyword{record}\AgdaSpace{}%
+\AgdaRecord{ConcurrentMonoid}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set₁}\AgdaSpace{}%
+\AgdaKeyword{where}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{constructor}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
+\\
+%
+\>[2]\AgdaKeyword{field}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[4]\AgdaField{eqₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{IsEquivalence}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\>[4]\AgdaField{porderₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{IsPreorder}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}\<%
+\\
+%
+\>[4]\AgdaField{zeroₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\<%
+\\
+%
+\>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\<%
+\\
+%
+\>[4]\AgdaField{sidl}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{zeroₘ}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+%
+\>[4]\AgdaField{sidr}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaField{zeroₘ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+%
+\>[4]\AgdaField{sassoc}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{z}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaField{maxₘ}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{M}\<%
+\\
+%
+\>[4]\AgdaField{midl}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaField{zeroₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+%
+\>[4]\AgdaField{midr}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaField{zeroₘ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaBound{x}\<%
+\\
+%
+\>[4]\AgdaField{massoc}%
+\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{z}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSymbol{)))}\<%
+\\
+%
+\>[4]\AgdaField{ichange}%
+\>[13]\AgdaSymbol{:}%
+\>[454I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{z}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{w}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\<%
+\\
+\>[454I][@{}l@{\AgdaIndent{0}}]%
+\>[17]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{z}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSymbol{))}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{((}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSymbol{))}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaModule{ConcurrentMonoid}\AgdaSpace{}%
+\AgdaKeyword{public}\<%
+\end{code}
+%</monoidconc>
